Added git commits management (to be reviewed) and examples of usage